[gd_scene load_steps=4 format=3 uid="uid://cvqvspmmtyay"]

[ext_resource type="Script" path="res://ui/pause_menu/pause_menu.gd" id="1_rgru7"]
[ext_resource type="PackedScene" uid="uid://bw5nofb8uccj3" path="res://ui/custom_components/label.tscn" id="2_v8msa"]
[ext_resource type="PackedScene" uid="uid://t4j713qylqb1" path="res://ui/custom_components/button/button.tscn" id="3_48gno"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rgru7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.152941, 0.211765, 0.392157)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="Title" parent="CanvasLayer/MarginContainer/VBoxContainer" instance=ExtResource("2_v8msa")]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" parent="CanvasLayer/MarginContainer/VBoxContainer" instance=ExtResource("3_48gno")]
layout_mode = 2
text = "Continue"

[node name="Quit" parent="CanvasLayer/MarginContainer/VBoxContainer" instance=ExtResource("3_48gno")]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
